# monja

./: CONTRIBUTING.md  Cargo.toml  README.md  notes.md  rust-toolchain.toml  rustfmt.toml
src/: completions.rs  files.rs  lib.rs  local.rs  main.rs  monja.rs  repo.rs  rsync.rs
src/files/: local.rs  repo.rs
src/local/: index.rs
src/monja/: local.rs  repo.rs
src/operation/: clean.rs  fix.rs  init.rs  new_set.rs  pull.rs  push.rs  put.rs  set_shortcut.rs  status.rs  transfer.rs
tests/: clean.rs  fix.rs  init.rs  new_set.rs  pull.rs  push.rs  put.rs  set_shortcut.rs  status.rs  transfer.rs
tests/sim/: mod.rs
