[package]
name = "monja"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["cargo", "derive"] }
ignore = "0.4.23"
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.7"
walkdir = "2.5.0"

[dev-dependencies]
googletest = "0.14.2"
tempfile = "3.23.0"