[package]
name = "monja"
version = "0.1.0"
edition = "2024"
description = "A very simple to use and easy to reason about multi-machine dotfiles manager."

[dependencies]
# cli-only. so don't use these in monja.
anyhow = "1.0.100"
# though, just because there's no strong reason to overcomplicate, there is one type in the monja crate that uses clap
clap = { version = "4.5.48", features = ["cargo", "derive"] }
xdg = "3.0.0"

# monja-only. aka don't export them! not a big deal either way, but it's the goal.
ignore = "0.4.23"
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.7"
walkdir = "2.5.0"

# and anywhere
indoc = "2.0.6"

[dev-dependencies]
googletest = "0.14.2"
tempfile = "3.23.0"